--- a/WBooks/App/BookDetail/Comments/Cells/CommentCell.xib
+++ b/WBooks/App/BookDetail/Comments/Cells/CommentCell.xib
@@ -6,43 +6,67 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CommentsView"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="EaU-fD-bXS" customClass="CommentCell" customModule="WBooks" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="127"/>
+            <rect key="frame" x="0.0" y="0.0" width="335" height="127"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="EaU-fD-bXS" id="cpH-HX-XwR">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="127"/>
+                <rect key="frame" x="0.0" y="0.0" width="335" height="127"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V4Z-Zu-1xa">
-                        <rect key="frame" x="30" y="27" width="47" height="45"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V4Z-Zu-1xa">
+                        <rect key="frame" x="14" y="27" width="47" height="45"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="45" id="7Eg-U3-xfC"/>
+                            <constraint firstAttribute="width" constant="47" id="Zex-Eo-PwR"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8CY-gh-NsL">
-                        <rect key="frame" x="103" y="27" width="79" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8CY-gh-NsL">
+                        <rect key="frame" x="80" y="22" width="238" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkA-e7-ZAy">
-                        <rect key="frame" x="103" y="50" width="253" height="74"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkA-e7-ZAy">
+                        <rect key="frame" x="80" y="48" width="238" height="18"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pF9-qF-FHJ">
+                        <rect key="frame" x="80" y="125" width="238" height="1"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="q3v-xu-8t2"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="dkA-e7-ZAy" secondAttribute="trailing" constant="17" id="5Nj-Zt-3ba"/>
+                    <constraint firstItem="dkA-e7-ZAy" firstAttribute="leading" secondItem="V4Z-Zu-1xa" secondAttribute="trailing" constant="19" id="Ghq-Tm-exj"/>
+                    <constraint firstItem="pF9-qF-FHJ" firstAttribute="trailing" secondItem="dkA-e7-ZAy" secondAttribute="trailing" id="QP8-Tt-ndx"/>
+                    <constraint firstItem="dkA-e7-ZAy" firstAttribute="top" secondItem="8CY-gh-NsL" secondAttribute="bottom" constant="5" id="Qa2-cD-uka"/>
+                    <constraint firstItem="8CY-gh-NsL" firstAttribute="leading" secondItem="V4Z-Zu-1xa" secondAttribute="trailing" constant="19" id="VuV-Pf-NPu"/>
+                    <constraint firstItem="V4Z-Zu-1xa" firstAttribute="top" secondItem="cpH-HX-XwR" secondAttribute="top" constant="27" id="YTa-ox-zss"/>
+                    <constraint firstItem="pF9-qF-FHJ" firstAttribute="leading" secondItem="dkA-e7-ZAy" secondAttribute="leading" id="bM2-H6-eHu"/>
+                    <constraint firstAttribute="trailing" secondItem="8CY-gh-NsL" secondAttribute="trailing" constant="17" id="ui5-Dv-aeh"/>
+                    <constraint firstItem="8CY-gh-NsL" firstAttribute="top" secondItem="cpH-HX-XwR" secondAttribute="top" constant="22" id="y3b-MB-kP8"/>
+                    <constraint firstAttribute="bottom" secondItem="pF9-qF-FHJ" secondAttribute="bottom" constant="1" id="yhZ-Ya-qjP"/>
+                    <constraint firstItem="V4Z-Zu-1xa" firstAttribute="leading" secondItem="cpH-HX-XwR" secondAttribute="leading" constant="14" id="zfW-u6-KCN"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="cellView" destination="cpH-HX-XwR" id="qnP-FT-YGD"/>
-                <outlet property="commentDescription" destination="dkA-e7-ZAy" id="W7C-Ya-V95"/>
-                <outlet property="commentImage" destination="V4Z-Zu-1xa" id="7h9-Ds-Wkf"/>
-                <outlet property="commentUsername" destination="8CY-gh-NsL" id="kvR-Li-EVc"/>
+                <outlet property="cellView" destination="cpH-HX-XwR" id="omu-9R-fXZ"/>
+                <outlet property="commentDescription" destination="dkA-e7-ZAy" id="mYc-m0-Xfc"/>
+                <outlet property="commentImage" destination="V4Z-Zu-1xa" id="wH3-dI-9gc"/>
+                <outlet property="commentUsername" destination="8CY-gh-NsL" id="AJY-Kr-88F"/>
+                <outlet property="separatorLine" destination="pF9-qF-FHJ" id="q2X-Po-eSK"/>
             </connections>
-            <point key="canvasLocation" x="10" y="52"/>
+            <point key="canvasLocation" x="8.6956521739130448" y="51.897321428571423"/>
         </tableViewCell>
     </objects>
 </document>
