--- a/WBooks/App/BookDetail/Comments/View/CommentsView.xib
+++ b/WBooks/App/BookDetail/Comments/View/CommentsView.xib
@@ -8,7 +8,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CommentsView" customModule="WBooks" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CommentsView" customModule="WBooks" customModuleProvider="target">
+            <connections>
+                <outlet property="tableView" destination="hUg-wF-zFZ" id="W8p-DV-ivD"/>
+                <outlet property="viewContainer" destination="hc1-CG-SMr" id="cos-MV-OaC"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="hc1-CG-SMr">
             <rect key="frame" x="0.0" y="0.0" width="375" height="275"/>
@@ -22,7 +27,7 @@
             <viewLayoutGuide key="safeArea" id="dK3-b8-v61"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="hUg-wF-zFZ" secondAttribute="bottom" constant="47" id="18v-pw-BkG"/>
+                <constraint firstItem="dK3-b8-v61" firstAttribute="bottom" secondItem="hUg-wF-zFZ" secondAttribute="bottom" constant="47" id="18v-pw-BkG"/>
                 <constraint firstItem="hUg-wF-zFZ" firstAttribute="leading" secondItem="hc1-CG-SMr" secondAttribute="leading" constant="20" id="6bw-Ka-3eH"/>
                 <constraint firstItem="hUg-wF-zFZ" firstAttribute="top" secondItem="hc1-CG-SMr" secondAttribute="top" constant="10" id="M1B-Up-QAh"/>
                 <constraint firstAttribute="trailing" secondItem="hUg-wF-zFZ" secondAttribute="trailing" constant="20" id="m39-fR-PgP"/>
