Added rentals with book detail

--- a/WBooks/App/BookDetail/View/BookDetailView.xib
+++ b/WBooks/App/BookDetail/View/BookDetailView.xib
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LibraryView" customModule="WBooks" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BookDetailView" customModule="WBooks" customModuleProvider="target">
             <connections>
-                <outlet property="navigationBar" destination="12k-EU-3cs" id="jtD-76-Jzv"/>
-                <outlet property="viewContainer" destination="eE3-xc-Kh7" id="bK9-Ac-7wU"/>
+                <outlet property="detailView" destination="Uuo-Ok-DaA" id="FXi-KG-jcE"/>
+                <outlet property="viewContainer" destination="iN0-l3-epB" id="To8-FC-xSx"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -20,27 +20,27 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NavigationBar" translatesAutoresizingMaskIntoConstraints="NO" id="12k-EU-3cs">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NavigationBar" translatesAutoresizingMaskIntoConstraints="NO" id="zjF-51-Dsa">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="102"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="AccentColor"/>
                 </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eE3-xc-Kh7">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uuo-Ok-DaA">
                     <rect key="frame" x="0.0" y="102" width="375" height="565"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" name="AccentColor"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="eE3-xc-Kh7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Bya-pc-Wmm"/>
-                <constraint firstItem="12k-EU-3cs" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="KSr-6m-cJj"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="eE3-xc-Kh7" secondAttribute="bottom" id="RWB-O5-Waw"/>
-                <constraint firstItem="eE3-xc-Kh7" firstAttribute="top" secondItem="12k-EU-3cs" secondAttribute="bottom" id="SNy-IA-X1C"/>
-                <constraint firstAttribute="trailing" secondItem="eE3-xc-Kh7" secondAttribute="trailing" id="aSP-JH-gSj"/>
-                <constraint firstItem="12k-EU-3cs" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="j7R-aI-3iZ"/>
-                <constraint firstAttribute="trailing" secondItem="12k-EU-3cs" secondAttribute="trailing" id="qUk-FY-ga0"/>
+                <constraint firstItem="zjF-51-Dsa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="2PU-2h-kT0"/>
+                <constraint firstAttribute="bottom" secondItem="Uuo-Ok-DaA" secondAttribute="bottom" id="APb-t1-WBG"/>
+                <constraint firstItem="Uuo-Ok-DaA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="EgW-nM-FM2"/>
+                <constraint firstItem="zjF-51-Dsa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Rp9-WY-4cv"/>
+                <constraint firstItem="Uuo-Ok-DaA" firstAttribute="top" secondItem="zjF-51-Dsa" secondAttribute="bottom" id="Sng-Qf-uKW"/>
+                <constraint firstAttribute="trailing" secondItem="Uuo-Ok-DaA" secondAttribute="trailing" id="WYU-JU-3E6"/>
+                <constraint firstAttribute="trailing" secondItem="zjF-51-Dsa" secondAttribute="trailing" id="WwX-WH-bfA"/>
             </constraints>
-            <point key="canvasLocation" x="136.80000000000001" y="93.103448275862078"/>
+            <point key="canvasLocation" x="139" y="96"/>
         </view>
     </objects>
     <resources>
