--- a/WBooks/App/Rentals/View/RentalsView.xib
+++ b/WBooks/App/Rentals/View/RentalsView.xib
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BookDetailView" customModule="WBooks" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RentalsView" customModule="WBooks" customModuleProvider="target">
             <connections>
-                <outlet property="detailView" destination="Uuo-Ok-DaA" id="FXi-KG-jcE"/>
-                <outlet property="viewContainer" destination="iN0-l3-epB" id="To8-FC-xSx"/>
+                <outlet property="navigationBar" destination="lnd-BA-nHE" id="Wfr-7a-BPL"/>
+                <outlet property="viewContainer" destination="2SD-fF-Ast" id="eeJ-jS-vfP"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -20,25 +20,25 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NavigationBar" translatesAutoresizingMaskIntoConstraints="NO" id="zjF-51-Dsa">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NavigationBar" translatesAutoresizingMaskIntoConstraints="NO" id="lnd-BA-nHE">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="102"/>
-                    <color key="backgroundColor" name="AccentColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uuo-Ok-DaA">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2SD-fF-Ast">
                     <rect key="frame" x="0.0" y="102" width="375" height="565"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="AccentColor"/>
             <constraints>
-                <constraint firstItem="zjF-51-Dsa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="2PU-2h-kT0"/>
-                <constraint firstAttribute="bottom" secondItem="Uuo-Ok-DaA" secondAttribute="bottom" id="APb-t1-WBG"/>
-                <constraint firstItem="Uuo-Ok-DaA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="EgW-nM-FM2"/>
-                <constraint firstItem="zjF-51-Dsa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Rp9-WY-4cv"/>
-                <constraint firstItem="Uuo-Ok-DaA" firstAttribute="top" secondItem="zjF-51-Dsa" secondAttribute="bottom" id="Sng-Qf-uKW"/>
-                <constraint firstAttribute="trailing" secondItem="Uuo-Ok-DaA" secondAttribute="trailing" id="WYU-JU-3E6"/>
-                <constraint firstAttribute="trailing" secondItem="zjF-51-Dsa" secondAttribute="trailing" id="WwX-WH-bfA"/>
+                <constraint firstAttribute="trailing" secondItem="2SD-fF-Ast" secondAttribute="trailing" id="2G8-hI-RIe"/>
+                <constraint firstItem="2SD-fF-Ast" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Oak-N5-Lt5"/>
+                <constraint firstItem="lnd-BA-nHE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="T3t-Zp-2WF"/>
+                <constraint firstItem="2SD-fF-Ast" firstAttribute="top" secondItem="lnd-BA-nHE" secondAttribute="bottom" id="Uas-A1-b6h"/>
+                <constraint firstAttribute="trailing" secondItem="lnd-BA-nHE" secondAttribute="trailing" id="fOK-1o-hS7"/>
+                <constraint firstItem="lnd-BA-nHE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="kAa-Px-dYE"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="2SD-fF-Ast" secondAttribute="bottom" id="zf2-ZY-Vaz"/>
             </constraints>
             <point key="canvasLocation" x="139" y="96"/>
         </view>
@@ -46,7 +46,7 @@
     <resources>
         <image name="NavigationBar" width="375" height="102"/>
         <namedColor name="AccentColor">
-            <color red="0.9179999828338623" green="0.9649999737739563" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.91764705882352937" green="0.96470588235294119" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
